// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test double-lined params should remove the new line for param names that are two lines 1`] = `
import { fbt } from "fbtee";
fbt._(
  "{two lines} test",
  [
    fbt._param(
      "two lines",
      /*#__PURE__*/ React.createElement(
        "b",
        null,
        fbt._("simple", null, {
          hk: "2pjKFw",
        })
      )
    ),
  ],
  {
    hk: "2xRGl8",
  }
);

`;

exports[`fbt variable binding detection should handle commonJS require() 1`] = `
const fbt = require("fbtee");
fbt._("Foo", null, {
  hk: "3ktBJ2",
});

`;

exports[`fbt variable binding detection using ES6 should handle fbt default export 1`] = `
import fbt from "fbtee";
fbt._("Foo", null, {
  hk: "3ktBJ2",
});

`;

exports[`fbt variable binding detection using ES6 should handle the named fbt export 1`] = `
import { fbt } from "fbtee";
fbt._("Foo", null, {
  hk: "3ktBJ2",
});

`;

exports[`fbt() API:  using FBT subject should accept "subject" as a parameter 1`] = `
import { fbt } from "fbtee";
fbt._(
  {
    "*": "Foo",
  },
  [fbt._subject(foo)],
  {
    hk: "7I4k2",
  }
);

`;

exports[`fbt() API:  using FBT subject with string templates should accept "subject" as a parameter 1`] = `
import { fbt } from "fbtee";
fbt._(
  {
    "*": "Foo",
  },
  [fbt._subject(foo)],
  {
    hk: "7I4k2",
  }
);

`;

exports[`fragments inside of <fbt:param> 1`] = `
import { fbt } from "fbtee";
fbt._(
  "{param} test",
  [
    fbt._param(
      "param",
      /*#__PURE__*/ React.createElement(
        React.Fragment,
        null,
        /*#__PURE__*/ React.createElement("b", null, "Test"),
        fbt._("simple", null, {
          hk: "2pjKFw",
        })
      )
    ),
  ],
  {
    hk: "154Qct",
  }
);

`;
